--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,9 +9,10 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ "master" ]
-    tags: ['*.*.*']
+  release:
+    types:
+      - released
+      - published
 
 env:
   REGISTRY: ghcr.io
