--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 spring.mvc.hiddenmethod.filter.enabled=true
+logging.level.org.springframework.web=DEBUG
