--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -30,7 +30,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
@@ -38,7 +38,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B -e package --file pom.xml
+        run: mvn -B -X package --file pom.xml
 
       - name: Docker compose
         run: docker compose build
